--- a/about.html
+++ b/about.html
@@ -3,15 +3,12 @@ layout: about
 title: About
 ---
 
-<h2>About</h2>
+<h2>황수현</h2>
 
 <p>
-:art:&nbsp;Yet another theme for elegant writers with modern flat style
-and beautiful night mode.
+17학번 화학과, '이 세계'에선 22학번 컴소과?!?!
 </p>
 
 <p>
-Hey, nice to meet you, you found this Jekyll theme. Here the yet another
-theme is a modern theme, and it's quite clear, clean and neat for writers
-and posts.
+만나서 반갑습니다.
 </p>
